# nn

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Cpp - Shortcut.lnk  LICENSE  Makefile  README.md  ROADMAP.md  make  setup.sh
.proto1/.spec/: syntax.txt
.proto1/.spec/proto_examples/: mastermind.nn
.proto1/src/common/: grammar.h  util.h
.proto2/.spec/: ll2syntax.txt
.proto2/proto/: tokenizer.py
.spec/: Ideas.txt  casting.txt  complier_notes.txt  forcondsyntax.txt  function_calls.txt  future_stuff.txt  instructions.txt  ll2syntax.txt  mangling.txt  name_resolution.txt  objects_in_memory.txt  operator_precedence.txt  pitfalls_and_todos.txt  program_memory.txt  spec.txt  syntax.txt  vardeclsyntax.txt
.spec/proto_examples/: mastermind2.nn  mm.nn  mm.txt
examples/: add.nna  better_c.nn  better_c_extern.nn  fib.nna  fizzbuzz.nn  mastermind2.nn  mm.nn  morse.nn  phase_1.nn  pithagoras.nna  simple.nn  sixty_nine.nn  std.nn  students.nn
other/: nn.xml  nna.xml
proto/: _ast.py  _logger.py  grammar.py  main.py  nnast.py  nnparser.py  parser.py  reader.py  symbol_table.py  tokenizer.py  type.py  type_table.py
proto1/: clean
proto1/.spec/: std.txt
proto2/proto/: main.py  nnparser.py  reader.py  symbol_table.py  type_table.py
roadmap/: 0100_BETTER_C_NN.md  0300_BASIC_NN.md  0400_COMPILETIME_NN.md  0500_ADVANCED_NN.md  0600_LOWLEVEL_NN.md  0900_COMMAND_LINE.md
spec/: ast_to_ast.txt  casting.txt  description.md  expression_precedence.txt  expressions.txt  future.txt  notes_to_self.txt  problems_solutions.md  semantics.txt  syntax.ebnf  syntax.txt  token_to_ast.txt  tokens.txt  type_mangling.txt
src/: CMakeLists.txt  ast.rs  compiler.rs  lexer.rs  main.cpp  main.rs  module.rs  parser.rs
src/autogeneration/nnasm/: generate.py  instructions.txt  nnasm.template.cxx  nnasm_codes.template.h  vm_impl.template.cxx
src/backend/: ir_compiler.cpp  ir_compiler.h  nnasm.cpp  nnasm.h
src/common/: asm.h  ast.cpp  ast.h  ast.hpp  ast_walker.cpp  ast_walker.h  compile_unit.cpp  compile_unit.h  compiler_note.cpp  compiler_note.h  convenience.h  defs.h  filesystem_include.h  globals.cpp  globals.h  grammar.cpp  grammar.h  ir.cpp  ir.h  list.h  logger.cpp  logger.h  os.h  source.cpp  source.hpp  symbol_table.cpp  symbol_table.h  token.cpp  token.h  token.hpp  token_stream.cpp  token_stream.h  trie.h  type.cpp  type.h  type_table.cpp  type_table.h  util.cpp  util.h  utils.cpp  (+2 more)
src/common/fibers/: fiber.cpp  fiber.h  fiber_pool.cpp  fiber_pool.h
src/common/threading/: semaphore.cpp  semaphore.h  thread_pool.cpp  thread_pool.h
src/compiler/: main.cpp
src/driver/: driver.cpp  driver.hpp
src/frontend/: asm_compiler.cpp  asm_compiler.h  ast_optimizer.cpp  ast_to_ir.cpp  ast_to_ir.h  compiler.cpp  compiler.h  lexer.cpp  lexer.h  lexer.hpp  nnasm_compiler.cpp  nnasm_compiler.h  parser.cpp  parser.h  parser.hpp  reader.cpp  reader.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h
src/frontend/compilers/: ast_compiler.cpp  ast_compiler.h  file_parser.cpp  file_parser.h
src/frontend/nn/: ast_compiler.cpp  ast_compiler.h  ast_optimizer.cpp  ast_optimizer.h  ast_to_ir.cpp  ast_to_ir.h  lexer.cpp  lexer.h  parser.cpp  parser.h  reader.cpp  reader.h  token.cpp  token.h
src/frontend/nnasm/: compiler.cpp  compiler.h
src/frontend/parser_passes/: token_to_ast_pass.cpp  token_to_ast_pass.h
src/lib/: compiler.rs  frontend.rs  lexer.rs  lib.rs  middleend.rs  module.rs  parser.rs  util.rs
src/lib/frontend/: ir_gen.rs  lexer.rs  module.rs  parser.rs
src/lib/frontend/ir_gen/: ir.rs
src/lib/frontend/lexer/: token.rs
src/lib/frontend/module/: span.rs
src/lib/frontend/parser/: ast.rs
src/lib/middleend/: bytecode.rs  prepare.rs
src/lib/util/: indexed_vector.rs  mod.rs  vec_util.rs
src/util/: assert.hpp  enum_map.hpp  format.hpp  types.cpp  types.hpp  vec_util.rs
src/vm/: machine.cpp  machine.h
(+26 files in other folders)
